--- a/src/main/resources/templates/jjj/header.html
+++ b/src/main/resources/templates/jjj/header.html
@@ -48,7 +48,7 @@
 <!-- <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-analytics.js"></script> -->
 
-<title>경상도숙박장사</title>
+<title>대구 숙박은 DAE BAK</title>
 
 </head>
 
