--- a/src/main/resources/static/css/kty.css
+++ b/src/main/resources/static/css/kty.css
@@ -80,7 +80,7 @@ input[type="button" i] {
 	flex: 1;
 }
 
-.join_username, .join_password1, .join_password2 {
+.join_username, .join_password1, .join_password2, .join_nickname {
 	width: 100%;
 	border: none;
 	outline: none;
@@ -347,16 +347,18 @@ a {
 .userinfo_table {
 	position: relative;
 	font-size: 18px;
+	margin-left: -50px;
+	margin-top: -30px;
+	border-collapse: collapse;
+	text-align: left;
+	width: 700px;
 }
 
-.userinfo_td_gap {
 
+.userinfo_td_gap {
 	white-space: nowrap;
 	position: relative;
-	padding-bottom: 40px;
-	/* 아래쪽 간격 크기 조절 */
-	padding-left: 100px;
-	/* 좌측 간격 크기 조절 */
+	padding: 20px 0px;
 }
 
 #unique_social_provider{
@@ -378,14 +380,11 @@ h5 .nav-link{
 }
 
 .btns-wrap__edit-btn {
-	position: absolute;
-	border: 1px solid grey;
-	border-radius: 8px;
-	background-color: white;
-	color: black;
-	top: -20px;
-	width: 200px;
-	height: 50px;
+    border: 1px solid #000000;
+    background-color: white;
+    border-radius: 3px;
+    width: 100px;;
+	padding: 8px 0px;
 }
 #confirm_newPwd{
 	font-size: 12px;
@@ -403,9 +402,7 @@ h5 .nav-link{
 	list-style-type: none;
 	padding-bottom: 40px;
 	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
+	align-items: flex-start;
 }
 
 #mypage_sidebar_nav {
@@ -439,7 +436,7 @@ li.mypage_sidebar a.active {
 
 .modify_password {
 	height: 30px;
-	width: 185px;
+	width: 300px;
 	border: none;
 	border-bottom: 1px solid rgb(128, 128, 128);
 }
@@ -463,30 +460,38 @@ li.mypage_sidebar a.active {
 
 .modify_password2 {
 	height: 30px;
-	width: 185px;
+	width: 300px;
 	border: none;
 	border-bottom: 1px solid rgb(128, 128, 128);
 }
 
 .modify_password3 {
 	height: 30px;
-	width: 185px;
+	width: 300px;
 	border: none;
 	border-bottom: 1px solid rgb(128, 128, 128);
 }
 
-#modifypassword {
+#modifypassword, #cancelBtn, #cancelBtnAddr {
 	position: relative;
 	border: 1px solid grey;
 	border-radius: 8px;
 	background-color: rgb(255, 159, 159);
 	color: rgb(255, 255, 255);
-	width: 200px;
+	width: 100px;
 	height: 50px;
 	font-weight: bold;
 }
 
 #modifypassword:hover {
+	cursor: pointer;
+}
+
+#cancelBtnAddr:hover {
+	cursor: pointer;
+}
+
+#cancelBtn:hover {
 	cursor: pointer;
 }
 
@@ -521,7 +526,7 @@ li.mypage_sidebar a.active {
 	border-radius: 8px;
 	background-color: rgb(255, 159, 159);
 	color: rgb(255, 255, 255);
-	width: 200px;
+	width: 100px;
 	height: 50px;
 	font-weight: bold;
 }
@@ -1114,4 +1119,9 @@ li.mypage_sidebar a.active {
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
+}
+
+.mypage_sidebar_nav_menu{
+	padding: 0px;
+	text-align: left;
 }
