--- a/src/main/resources/static/css/my_product_booklist.css
+++ b/src/main/resources/static/css/my_product_booklist.css
@@ -86,6 +86,28 @@
 	margin-left:10px;
 	border-radius: 5px;
 	
+	
+}
+#st_kty_title{
+	font-size:20px;
+}
+#reasonCancle{
+	height:180px;
+	margin-left:20px;
+	margin-top:20px;
+}
+
+#submitButton{
+    width:200px;
+    height:40px;
+    border:none;
+    background-color: orange;
+    font-weight:bold;
+    color:white;
+    font-size:15px;
+	margin-top: 20px;
+	  border-radius: 10px;
+	
 }
 .modal-content {
 	text-align:center;
@@ -98,12 +120,14 @@
     max-width: 500px;
     border-radius: 5px;
     position: relative;
+    border-radius: 10px;
 }
 
 .close {
     color: #aaa;
     float: right;
     font-size: 28px;
+    margin-top:-10px;
     font-weight: bold;
 }
 
