--- a/src/main/resources/templates/kty/my_acc_bookList.html
+++ b/src/main/resources/templates/kty/my_acc_bookList.html
@@ -105,11 +105,11 @@
 		<!--  모달  -->
 		<div class="modal" id="myModal">
 			<div class="modal-content">
-				<span class="close" onclick="closeModal()">&times;</span> <strong>예약
+				<span class="close" onclick="closeModal()">&times;</span> <strong id="st_kty_title">예약
 					취소 요청</strong><br>
 				<form id="cancellationForm">
 					<textarea id="reasonCancle" rows="15" cols="60"
-						placeholder="취소 사유를 입력해주세요..."></textarea>
+						placeholder="취소 사유를 입력해주세요."></textarea>
 					<input type="hidden" id="bookNumValue" /> <input type="hidden"
 						id="authenticatedUserName" />
 					<button type="button" id="submitButton"
