--- a/src/main/resources/templates/kty/my_acc_bookList.html
+++ b/src/main/resources/templates/kty/my_acc_bookList.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script> <!-- sweetalert2 CDN-->
 <link rel="stylesheet" href="/css/my_product_booklist.css">
 <script th:src="@{/js/my_product_booklist.js}"></script>
 
