패스워드 유효성 검증 수정

--- a/src/main/resources/static/css/kty.css
+++ b/src/main/resources/static/css/kty.css
@@ -401,6 +401,11 @@ h5 .nav-link{
 	font-size: 12px;
 	margin: 5px 0;
 }
+
+#confirm_newPwd1{
+	font-size: 12px;
+	margin: 5px 0;
+}
 #confirm_oldPwd{
 	font-size: 12px; 
 	margin: 5px 0;
