--- a/src/main/resources/templates/kty/mypage.html
+++ b/src/main/resources/templates/kty/mypage.html
@@ -44,7 +44,8 @@
 					<br> <strong>새 비밀번호 </strong>
 					<div></div>
 					<input type="password" class="modify_password2"
-					id="modify_password2_input" placeholder="새 비밀번호를 입력하세요"><br>
+					id="modify_password2_input" placeholder="새 비밀번호를 입력하세요">
+					<div  id="confirm_newPwd1"></div>
 				<br> <strong>새 비밀번호 확인 </strong>
 					<div></div>
 					<input type="password" class="modify_password3"
