--- a/src/main/resources/templates/kdg/fail.html
+++ b/src/main/resources/templates/kdg/fail.html
@@ -2,16 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>결제 완료</title>
+<title>예약 실패</title>
 </head>
 <body>
-    <h1>카카오페이 결제가 정상적으로 완료되었습니다.</h1>
+    <h1>결제에 실패하였습니다.</h1>
     <h3>결제 상세 정보:</h3>
-    <p>결제일시: [[${info.approvedAt}]]</p>
-    <p>주문번호: [[${info.partnerOrderId}]]</p>
-    <p>상품명: [[${info.itemName}]]</p>
-    <p>상품수량: [[${info.quantity}]]</p>
-    <p>결제금액: [[${info.amount.total}]]</p>
-    <p>결제방법: [[${info.paymentMethodType}]]</p>
+    <p>주문번호: [[${book.tid}]]</p>
+    <p>상품명: [[${book.roomTitle}]]</p>
+    <p>결제금액: [[${book.totalPrice}]]</p>
+    <p>결제방법: [[${book.payType}]]</p>
 </body>
 </html>
