--- a/src/main/resources/templates/kty/signup_form.html
+++ b/src/main/resources/templates/kty/signup_form.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>경상도숙박장사</title>
+	<title>대구 숙박은 DAE BAK</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com" />
