--- a/src/main/resources/templates/kty/daegu_tour10.html
+++ b/src/main/resources/templates/kty/daegu_tour10.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=976e820c4563105a585eb83c8ea88bd6&libraries=services"></script>
-	<title>경상도숙박장사</title>
+	<title>대구 숙박은 DAE BAK</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="/css/kty2.css">
@@ -16,7 +16,7 @@
 	<!-- 네비게이션을 그리는1 ss선 -->
 	<div class="nav-area">
 		 <input type="button" id="current_me_position" value="내 현재 위치"> 
-		<br> <span id="daegu_top10_title">경상도숙박장사가 추천하는 대구 여행 코스 ❤️</span>
+		<br> <span id="daegu_top10_title">DAE BAK이 추천하는 대구 여행 코스 ❤️</span>
 		<div class="box"></div>
 	</div>
 	<header>
