--- a/src/main/resources/static/css/admin_notice.css
+++ b/src/main/resources/static/css/admin_notice.css
@@ -1,6 +1,13 @@
 @charset "UTF-8";
 
 
+:root {
+	--main-color: #e93c3c;
+	--background-color: #ffffff;
+	--hover-color: #ffa6a6;
+	--text-color: rgb(109, 109, 109);
+}
+
 h1 {
 	text-align: center;
 	margin: 30px 0;
@@ -40,6 +47,44 @@ th {
 
 form {
 	display: inline-block;
+}
+
+.notice_hk{
+	top: 30px;
+    position: relative;
+	
+}
+
+/*  /* 버튼 스타일 */ */
+/*   .modi_btn { */
+/*     display: inline-block; */
+/*     background-color: var(--sub-color); */
+/*     color: #fff; */
+/*     border: none; */
+/*     padding: 8px 16px; */
+/*     cursor: pointer; */
+/*     text-decoration: none; */
+/*     border-radius: 5px; */
+/*     right: 0; */
+/*     width: 30px; */
+/*   } */
+/*   .del_btn { */
+/*     display: inline-block; */
+/*     background-color: #007bff; */
+/*     color: #fff; */
+/*     border: none; */
+/*     padding: 8px 16px; */
+/*     cursor: pointer; */
+/*     text-decoration: none; */
+/*     border-radius: 5px; */
+/*     right: 0; */
+/*   } */
+
+
+.btn_createNotice{
+	
+	float: right;
+	bottom: 50px;
 }
 
 input[type="submit"] {
@@ -203,9 +248,9 @@ span.role-ADMIN {
 }
 
 .content-container {
-/* 	margin: 0 200px; */
+	margin: 0 200px;
 	display: table-caption;
-	padding-left: 260px;
+/* 	padding-left: 350px; */
 	
 	/* max-width: 800px; */
 }
