--- a/src/main/resources/templates/kdg/success.html
+++ b/src/main/resources/templates/kdg/success.html
@@ -63,7 +63,7 @@
 		crossorigin="anonymous">
 	</script>
 	
-    <h1>카카오페이 결제가 정상적으로 완료되었습니다.</h1>
+    <h1> 결제가 정상적으로 완료되었습니다.</h1>
 <h3>결제 상세 정보:</h3>
 
 <table>
@@ -94,29 +94,6 @@
 </table>
 	<br>
 	 <button id="reservebtn" onclick="location.href='/user/mypage/my_booking'">예약내역으로 이동</button>
-     <!-- <button id="kaobtn2">결제취소</button> -->
-    
-    <!-- <script>
-		$(function() {
-		$("#kaobtn2").click(function (){ 
-			const amount = document.getElementById('amount').textContent;
-			const tid = document.getElementById('tid').textContent;
-			$.ajax({
-				type: 'post',
-				url: "/refundd",
-				data: {
-					tid: tid, 
-					cancel_amount: amount,
-					cancel_tax_free_amount: "200",
-					cancel_vat_amount: "200",
-				},
-				success: function(cres) {
-					location.href = "/user/mypage/my_booking";
-				}
-			});
-		});
-	});
-	</script>  -->
     
 </body>
 </html>
