--- a/src/main/resources/templates/kty/my_acc_bookList.html
+++ b/src/main/resources/templates/kty/my_acc_bookList.html
@@ -92,7 +92,7 @@
 					<td th:text="${book.checkin}"></td>
 					<td th:text="${book.checkOut}"></td>
 					<td>
-					<span th:if="${book.bookStatus == 'CANCEL_PAYMENT'}">취소 완료</span> <span th:unless="${book.bookStatus == 'CANCEL_PAYMENT'}"
+					<span th:block th:if="${book.bookStatus == 'CANCEL_PAYMENT' || book.bookStatus == 'CANCELED'}">취소 완료</span> <span th:unless="${book.bookStatus == 'CANCEL_PAYMENT' || book.bookStatus == 'CANCELED'}"
 						th:text="${book.bookStatus}"></span></td>
 					<td id="hidden_part_name" th:text="${book.accommodation.username}"></td>
 					<td>
