--- a/src/main/resources/templates/kty/cancle_request_list.html
+++ b/src/main/resources/templates/kty/cancle_request_list.html
@@ -279,7 +279,7 @@ document.addEventListener("DOMContentLoaded", function () {
 </script>
 <style>
 #bookingTable {
-    /* display: none;  */
+     display: none;  
 }
 
  .grayscale {
