--- a/src/main/resources/templates/pyr/product_detail.html
+++ b/src/main/resources/templates/pyr/product_detail.html
@@ -172,7 +172,7 @@
 								</div>
 								</p>
 								<p class="start_score">
-									<span th:if="${review.rating == 1}" class="start_repeat">★
+									<span th:if="${review.rating == 1}" class="star act_repeat">★
 										✩ ✩ ✩ ✩</span> <span th:if="${review.rating == 2}"
 										class="start_repeat">★ ★ ✩ ✩ ✩</span> <span
 										th:if="${review.rating == 3}" class="start_repeat">★ ★
