--- a/src/main/resources/templates/khk/partnerListPage.html
+++ b/src/main/resources/templates/khk/partnerListPage.html
@@ -351,6 +351,12 @@ span.role-ADMIN {
 						</tr>
 					</tbody>
 				</table>
+				
+				<div th:if="${paging.empty}">
+					<p>
+						해당하는 회원이 없습니다. <a href="/admin/partnerListPage">전체 목록으로 돌아가기</a>
+					</p>
+				</div>
 			</div>
 		</div>
 		<!-- 페이징처리 시작 -->
@@ -396,7 +402,17 @@ span.role-ADMIN {
 					document.getElementById('page').value = 0; // 검색버튼을 클릭할 경우 0페이지부터 조회한다.
 					document.getElementById('searchForm').submit();
 				});
+				 document.getElementById("search_kw").addEventListener("keyup", function (event) {
+					    if (event.keyCode === 13) {
+					      event.preventDefault(); // 기본 엔터키 동작 방지
+					      document.getElementById("btn_search").click(); // 검색 버튼 클릭
+					      document.getElementById("search_kw").focus();
+					    }
+					  });
 
+					  document.getElementById("btn_search").addEventListener("click", function () {
+					    button(); // 여기서 button()은 검색을 실행하는 함수입니다.
+					  });
 
 			</script>
 		</body>
