--- a/src/main/resources/templates/syw/notice.html
+++ b/src/main/resources/templates/syw/notice.html
@@ -27,7 +27,7 @@
                 <!-- CKEditor의 내용을 담을 div -->
                 <div id="content" data-editor="ckeditor" required></div>
             </div>
-            <input type="submit" value="등록" onclick="convertContent()">
+            <input type="submit" value="등록" onclick="convertContent()" class="create_notice_btn">
       </form>
    </div>
 
