--- a/src/main/resources/templates/khk/authorityPage.html
+++ b/src/main/resources/templates/khk/authorityPage.html
@@ -16,6 +16,8 @@
 					placeholder="username으로 찾기" th:value="${kw}">
 				<button class="btn btn-outline-secondary" type="button"
 					id="btn_search">검색</button>
+					
+					
 			</div>
 			<!-- 객체 개수 출력 -->
 			<div>
@@ -69,7 +71,7 @@
 											th:selected="${user.role == 'PARTNER'}">파트너</option>
 										<option value="ADMIN" th:selected="${user.role == 'ADMIN'}">관리자</option>
 									</select> <input type="hidden" name="id" th:value="${user.id}" />
-									<button type="submit" onclick="confirmChange(this.form)">변경</button>
+									<button type="submit" onclick="confirmChange(this.form)" class="select_btn_hk">변경</button>
 								</form>
 
 							</td>
@@ -292,35 +294,6 @@
 			document.getElementById('page').value = 0; // 검색버튼을 클릭할 경우 0페이지부터 조회한다.
 			document.getElementById('searchForm').submit();
 		});
-
-		
-		
-// 		// 페이지 로딩 시 검색어 필드에 기존 검색어를 설정하는 함수
-// 	    function setSearchKeyword() {
-// 	        var searchInput = document.getElementById("search_kw");
-// 	        var urlParams = new URLSearchParams(window.location.search);
-// 	        var kw = urlParams.get("kw");
-// 	        if (kw) {
-// 	            searchInput.value = kw;
-// 	        }
-// 	    }
-
-// 	    // 검색 버튼 클릭 이벤트 처리
-// 	    document.getElementById("btn_search").addEventListener('click', function () {
-// 	        var searchInput = document.getElementById("search_kw");
-// 	        var kw = searchInput.value.trim();
-// 	        var searchForm = document.getElementById("searchForm");
-// 	        if (kw !== "") {
-// 	            searchForm.action = "/admin/authorityPage"; // 검색 결과 페이지 URL로 변경
-// 	            searchForm.submit();
-// 	        } else {
-// 	            searchForm.action = "/admin/userList"; // 전체 목록 페이지 URL로 변경
-// 	            searchForm.submit();
-// 	        }
-// 	    });
-		
-		
-		
 
 
 		// 폼 제출 이벤트 처리
@@ -574,7 +547,19 @@ function toggleAccount(event, button) {
 		});
 		
 		
-	
+		 document.getElementById("search_kw").addEventListener("keyup", function (event) {
+			    if (event.keyCode === 13) {
+			      event.preventDefault(); // 기본 엔터키 동작 방지
+			      document.getElementById("btn_search").click(); // 검색 버튼 클릭
+			      document.getElementById("search_kw").focus();
+			    }
+			  });
+
+			  document.getElementById("btn_search").addEventListener("click", function () {
+			    button(); // 여기서 button()은 검색을 실행하는 함수입니다.
+			  });
+
+			
 	</script>
 	<script th:src="@{/js/kty_mypage.js}"></script>
 	</body>
